--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-  <div class="group
+  <div class="group">
 
   <span class="pull-right">
    <% if current_user && current_user.is_member_of?(@group) %>
